[package]
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
name = "ray"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_builder = "0.9"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
rand = "0.7"
rand_distr = "0.2.2"
pbr = "1.0"
random_color = "0.4"
rayon = "1.3.0"
